hcloud-cluster01/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app.kubernetes.io/name: whoami
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
